# nifty-network-analysis

./: .gitignore  LICENSE  README.md  main.py  prototype.ipynb  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/source/: conf.py  index.rst
docs/source/examples/: centrality_metrics.rst  community_detection.rst  correlation_analysis.rst
docs/source/modules/: data.rst  graph.rst  metrics.rst  visuals.rst
docs/source/tutorials/: advanced_analysis.rst  basic_usage.rst  web_app_guide.rst
niftynet/: __init__.py  config.py  data.py  graph.py  metrics.py  visuals.py
res/: index_nifty500.csv
tests/: __init__.py  test_data.py  test_graph.py  test_metrics.py  test_visuals.py
webapp/: app.py  config.py  run.py
webapp/components/: inputs.py  visualization.py
