[project]
name = "nifty-network-analysis"
dynamic = ["version"]
description = "Network analysis and visualization of Nifty companies using stock market data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Automatically get version from Git tags
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["niftynet*"]
